# tarot_project_demo

./: README.md  pyproject.toml
backend/: .env.example  main.py  pyproject.toml
backend/actions/: create_superuser.py  fake_db_fill.py
backend/alembic/: env.py
backend/alembic/versions/: 2024_11_16_1420-ad1195660438_create_users_table.py  2024_11_16_1728-9e554a24bc44_create_access_tokens_table.py  2024_11_16_2222-1beb85230d62_create_employees_candidates_and_reports_.py  2024_11_16_2341-a52209195fb2_fix_full_name_field_in_candidates_table.py  2024_11_17_0230-a7551ecbb641_fix_relationships_between_candidates_.py  2024_11_17_0259-4f651d5ab3cb_create_departments_table_and_relation_.py
backend/api/: __init__.py
backend/api/v1/: candidates.py  departments.py  employees.py  reports.py  users.py
backend/api/v1/crud/: candidates.py  departments.py  employees.py  reports.py
backend/api/v1/dependencies/: candidates.py  departments.py  employees.py  reports.py
backend/api/v1/models/: __init__.py  candidate.py  department.py  employee.py  report.py  report_candidate_association.py  report_employee_association.py  report_person_association.py
backend/api/v1/schemas/: candidates.py  departments.py  employees.py  reports.py
backend/api/v1/utils/: crud.py
backend/core/: config.py  types.py
backend/core/auth/: transport.py
backend/core/models/: __init__.py  access_token.py  base.py
backend/users/: auth.py  schemas.py
backend/users/dependencies/: access_tokens.py  fastapi_users.py  strategy.py  user_manager.py  users.py
backend/users/models/: user.py
(+51 files in other folders)
