[tool.poetry]
name = "tarot-project-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.5"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.30.0"
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
sqladmin = "^0.20.1"
passlib = "^1.7.4"
fastapi-users = {extras = ["sqlalchemy"], version = "^14.0.0"}


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
